Ass2_practiceFP/src/main/d96/parser/.antlr/D96Parser.py
# Generated from c:\Users\Dell\Desktop\Ass2_practiceFP\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'Array'", "'In'", "'By'", "'Int'", 
                     "'Float'", "'Boolean'", "'String'", "'Null'", "'Return'", 
                     "'Self'", "'New'", "'Class'", "'Val'", "'Var'", "'Constructor'", 
                     "'Destructor'", "<INVALID>", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'==.'", "'+.'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'::'", "':'", "'..'", "'.'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSEIF", 
                      "ELSE", "FOREACH", "ARRAY", "IN", "BY", "INT_TYPE", 
                      "FLOAT_TYPE", "BOOLEAN_TYPE", "STRING_TYPE", "NULL", 
                      "RETURN", "SELF", "NEW", "CLASS", "IMMUTABLE", "MUTABLE", 
                      "CONSTRUCTOR", "DESTRUCTOR", "DOLLAR_ID", "ASSIGN", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "STRCOMPARE", "CONCATE", "EQUAL", "NOTEQUAL", "LARGER", 
                      "SMALLER", "LE", "SE", "INTLIT_ARR", "INT_LIT_ARR", 
                      "BIN_", "DEC_", "OCTAL_", "HEXA_", "INT_LITERAL", 
                      "BOOL_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "BLOCK_COMMENT", "LB", "RB", "LP", "RP", "LS", "RS", 
                      "DOUBLE_COLON", "COLON", "DOUBLEDOT", "DOT", "COMMA", 
                      "SEMI_COLON", "ID", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declaration = 1
    RULE_member = 2
    RULE_attribute_declaration = 3
    RULE_attribute_decl_list = 4
    RULE_testing = 5
    RULE_testing2 = 6
    RULE_primitive_type = 7
    RULE_array_type = 8
    RULE_type_in_array = 9
    RULE_method_declaration = 10
    RULE_att_name = 11
    RULE_constructor = 12
    RULE_destructor = 13
    RULE_parameter_decl_list = 14
    RULE_parameter_decl = 15
    RULE_ids_list = 16
    RULE_block_statement = 17
    RULE_statement = 18
    RULE_var_declare_statement = 19
    RULE_var_decl_list = 20
    RULE_var_decl_stm_only = 21
    RULE_var_decl_stm_assign = 22
    RULE_assign_statement = 23
    RULE_call_stmt = 24
    RULE_instance_call_stmt = 25
    RULE_static_call_stmt = 26
    RULE_if_statement = 27
    RULE_for_statement = 28
    RULE_return_statement = 29
    RULE_break_statement = 30
    RULE_continue_statement = 31
    RULE_expression = 32
    RULE_expression1 = 33
    RULE_expression2 = 34
    RULE_expression3 = 35
    RULE_expression4 = 36
    RULE_expression5 = 37
    RULE_expression6 = 38
    RULE_expression7 = 39
    RULE_expression8 = 40
    RULE_expression9 = 41
    RULE_expression10 = 42
    RULE_index_operator = 43
    RULE_operands = 44
    RULE_literals = 45
    RULE_dollar_function = 46
    RULE_function_call = 47
    RULE_indexed_array = 48
    RULE_compound_type = 49
    RULE_expressions_list = 50
    RULE_attribute_type = 51

    ruleNames =  [ "program", "class_declaration", "member", "attribute_declaration", 
                   "attribute_decl_list", "testing", "testing2", "primitive_type", 
                   "array_type", "type_in_array", "method_declaration", 
                   "att_name", "constructor", "destructor", "parameter_decl_list", 
                   "parameter_decl", "ids_list", "block_statement", "statement", 
                   "var_declare_statement", "var_decl_list", "var_decl_stm_only", 
                   "var_decl_stm_assign", "assign_statement", "call_stmt", 
                   "instance_call_stmt", "static_call_stmt", "if_statement", 
                   "for_statement", "return_statement", "break_statement", 
                   "continue_statement", "expression", "expression1", "expression2", 
                   "expression3", "expression4", "expression5", "expression6", 
                   "expression7", "expression8", "expression9", "expression10", 
                   "index_operator", "operands", "literals", "dollar_function", 
                   "function_call", "indexed_array", "compound_type", "expressions_list", 
                   "attribute_type" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSEIF=4
    ELSE=5
    FOREACH=6
    ARRAY=7
    IN=8
    BY=9
    INT_TYPE=10
    FLOAT_TYPE=11
    BOOLEAN_TYPE=12
    STRING_TYPE=13
    NULL=14
    RETURN=15
    SELF=16
    NEW=17
    CLASS=18
    IMMUTABLE=19
    MUTABLE=20
    CONSTRUCTOR=21
    DESTRUCTOR=22
    DOLLAR_ID=23
    ASSIGN=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    NOT=30
    AND=31
    OR=32
    STRCOMPARE=33
    CONCATE=34
    EQUAL=35
    NOTEQUAL=36
    LARGER=37
    SMALLER=38
    LE=39
    SE=40
    INTLIT_ARR=41
    INT_LIT_ARR=42
    BIN_=43
    DEC_=44
    OCTAL_=45
    HEXA_=46
    INT_LITERAL=47
    BOOL_LITERAL=48
    FLOAT_LITERAL=49
    STRING_LITERAL=50
    BLOCK_COMMENT=51
    LB=52
    RB=53
    LP=54
    RP=55
    LS=56
    RS=57
    DOUBLE_COLON=58
    COLON=59
    DOUBLEDOT=60
    DOT=61
    COMMA=62
    SEMI_COLON=63
    ID=64
    WS=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104
                self.class_declaration()
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 109
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MemberContext)
            else:
                return self.getTypedRuleContext(D96Parser.MemberContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declaration




    def class_declaration(self):

        localctx = D96Parser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(D96Parser.CLASS)
            self.state = 112
            self.match(D96Parser.ID)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 113
                self.match(D96Parser.COLON)
                self.state = 114
                self.match(D96Parser.ID)


            self.state = 117
            self.match(D96Parser.LP)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 19)) & ~0x3f) == 0 and ((1 << (_la - 19)) & ((1 << (D96Parser.IMMUTABLE - 19)) | (1 << (D96Parser.MUTABLE - 19)) | (1 << (D96Parser.CONSTRUCTOR - 19)) | (1 << (D96Parser.DESTRUCTOR - 19)) | (1 << (D96Parser.DOLLAR_ID - 19)) | (1 << (D96Parser.ID - 19)))) != 0):
                self.state = 118
                self.member()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declaration(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declarationContext,0)


        def method_declaration(self):
            return self.getTypedRuleContext(D96Parser.Method_declarationContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_member)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.IMMUTABLE, D96Parser.MUTABLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.attribute_declaration()
                pass
            elif token in [D96Parser.DOLLAR_ID, D96Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.method_declaration()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_type(self):
            return self.getTypedRuleContext(D96Parser.Attribute_typeContext,0)


        def attribute_decl_list(self):
            return self.getTypedRuleContext(D96Parser.Attribute_decl_listContext,0)


        def SEMI_COLON(self):
            return self.getToken(D96Parser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute_declaration




    def attribute_declaration(self):

        localctx = D96Parser.Attribute_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.attribute_type()
            self.state = 133
            self.attribute_decl_list()
            self.state = 134
            self.match(D96Parser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_decl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testing(self):
            return self.getTypedRuleContext(D96Parser.TestingContext,0)


        def testing2(self):
            return self.getTypedRuleContext(D96Parser.Testing2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_decl_list




    def attribute_decl_list(self):

        localctx = D96Parser.Attribute_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute_decl_list)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.testing()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.testing2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_name(self):
            return self.getTypedRuleContext(D96Parser.Att_nameContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def compound_type(self):
            return self.getTypedRuleContext(D96Parser.Compound_typeContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(D96Parser.ExpressionContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def testing(self):
            return self.getTypedRuleContext(D96Parser.TestingContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_testing




    def testing(self):

        localctx = D96Parser.TestingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_testing)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.att_name()

                self.state = 141
                self.match(D96Parser.COLON)
                self.state = 142
                self.compound_type()

                self.state = 143
                self.match(D96Parser.ASSIGN)
                self.state = 144
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.att_name()
                self.state = 147
                self.match(D96Parser.COMMA)
                self.state = 148
                self.testing()

                self.state = 149
                self.match(D96Parser.COMMA)
                self.state = 150
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Testing2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Att_nameContext)
            else:
                return self.getTypedRuleContext(D96Parser.Att_nameContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def compound_type(self):
            return self.getTypedRuleContext(D96Parser.Compound_typeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_testing2




    def testing2(self):

        localctx = D96Parser.Testing2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_testing2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.att_name()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 155
                self.match(D96Parser.COMMA)
                self.state = 156
                self.att_name()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(D96Parser.COLON)
            self.state = 163
            self.compound_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(D96Parser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(D96Parser.FLOAT_TYPE, 0)

        def BOOLEAN_TYPE(self):
            return self.getToken(D96Parser.BOOLEAN_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(D96Parser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_primitive_type




    def primitive_type(self):

        localctx = D96Parser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INT_TYPE) | (1 << D96Parser.FLOAT_TYPE) | (1 << D96Parser.BOOLEAN_TYPE) | (1 << D96Parser.STRING_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LS(self):
            return self.getToken(D96Parser.LS, 0)

        def type_in_array(self):
            return self.getTypedRuleContext(D96Parser.Type_in_arrayContext,0)


        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def RS(self):
            return self.getToken(D96Parser.RS, 0)

        def INTLIT_ARR(self):
            return self.getToken(D96Parser.INTLIT_ARR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_array_type




    def array_type(self):

        localctx = D96Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(D96Parser.ARRAY)
            self.state = 168
            self.match(D96Parser.LS)
            self.state = 169
            self.type_in_array()
            self.state = 170
            self.match(D96Parser.COMMA)

            self.state = 171
            self.match(D96Parser.INTLIT_ARR)
            self.state = 172
            self.match(D96Parser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_in_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_type(self):
            return self.getTypedRuleContext(D96Parser.Array_typeContext,0)


        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_type_in_array




    def type_in_array(self):

        localctx = D96Parser.Type_in_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type_in_array)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ARRAY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.array_type()
                pass
            elif token in [D96Parser.INT_TYPE, D96Parser.FLOAT_TYPE, D96Parser.BOOLEAN_TYPE, D96Parser.STRING_TYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.primitive_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_name(self):
            return self.getTypedRuleContext(D96Parser.Att_nameContext,0)


        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)
